@@ -18,6 +18,8 @@ New Features:
   - dynamic layout uses jQuery Layout plugin and supports closing,
     resizing, fixed header/footer, separate scrolling left/right, etc
 - popup menus are in the header to save space and for easier layout
+- set action inside form field sub-elements and widget-template-include for
+  parameterized widget-template definitions
 
 Bug Fixes:
 
